DTGB-499: Fixed spacing issues.

--- a/components/41-organisms/extra-articles/_extra-articles.scss
+++ b/components/41-organisms/extra-articles/_extra-articles.scss
@@ -1,11 +1,4 @@
 .extra-articles {
-  @include theme('border-color', 'color-primary--lighten-4', 'more-info-block-border-color');
-
-  position: relative;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  border-top: 2px solid;
-
   &-content {
     > ul {
       display: flex;
