--- a/components/41-organisms/related-box/_related-box.scss
+++ b/components/41-organisms/related-box/_related-box.scss
@@ -1,9 +1,4 @@
-
 .related-box {
-  position: relative;
-  margin-bottom: 2rem;
-  padding-top: 2rem;
-
   &-content {
     display: flex;
     flex-wrap: wrap;
